Added a new blog post

--- a/public/404.html
+++ b/public/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="color-toggle-hidden">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <meta charset="UTF-8" />
 <meta name="referrer" content="no-referrer" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -91,7 +91,7 @@
   href="/custom.css"
   media="all"
 />
-    <link href="http://onigirionegai.info/feed.xml" rel="alternate" type="application/atom+xml" title="Onigiri☆Onegai atom Feed" />
+    <link href="http://localhost:1313/feed.xml" rel="alternate" type="application/atom+xml" title="Onigiri☆Onegai atom Feed" />
 
 <!-- Made with Geekblog theme https://github.com/thegeeklab/hugo-geekblog -->
 
@@ -108,7 +108,7 @@
   <div class="container flex flex-wrap">
     <div class="gblog-header__col-1 flex justify-start hidden-mobile"></div>
     <div class="gblog-header__col-2 flex align-center justify-center ">
-      <a class="gblog-header__link" rel="me" href="http://onigirionegai.info/">
+      <a class="gblog-header__link" rel="me" href="http://localhost:1313/">
         <span class="gblog-brand flex align-center justify-center">
           <img
             class="gblog-brand__img"
@@ -232,7 +232,7 @@
             <div class="gblog-error__line gblog-error__code">Error 404</div>
             <div class="gblog-error__line gblog-error__help">
               Seems like what you are looking for can't be found. Don't worry we can bring you back
-              to the <a class="gblog-error__link" href="http://onigirionegai.info/">homepage</a>.
+              to the <a class="gblog-error__link" href="http://localhost:1313/">homepage</a>.
             </div>
           </div>
         </div>
