--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   class="color-toggle-hidden"
   
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta charset="UTF-8" />
 <meta name="referrer" content="no-referrer" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,7 +34,7 @@
     
   <meta property="og:site_name" content="Onigiri☆Onegai" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/" />
+<meta property="og:url" content="http://onigirionegai.info/" />
 
 
 
@@ -49,7 +49,7 @@
       "@type": "WebSite",
       
       "name": "Onigiri☆Onegai",
-      "url": "http://localhost:1313/",
+      "url": "http://onigirionegai.info/",
       "inLanguage": "en"
   }
   </script>
@@ -124,8 +124,8 @@
   href="/custom.css"
   media="all"
 />
-  <link href="http://localhost:1313/" rel="canonical" type="text/html" />
-    <link href="http://localhost:1313/feed.xml" rel="alternate" type="application/atom+xml" title="Onigiri☆Onegai atom Feed" />
+  <link href="http://onigirionegai.info/" rel="canonical" type="text/html" />
+    <link href="http://onigirionegai.info/feed.xml" rel="alternate" type="application/atom+xml" title="Onigiri☆Onegai atom Feed" />
 
 <!-- Made with Geekblog theme https://github.com/thegeeklab/hugo-geekblog -->
 
@@ -148,7 +148,7 @@
   <div class="container flex flex-wrap">
     <div class="gblog-header__col-1 flex justify-start hidden-mobile"></div>
     <div class="gblog-header__col-2 flex align-center justify-center ">
-      <a class="gblog-header__link" rel="me" href="http://localhost:1313/">
+      <a class="gblog-header__link" rel="me" href="http://onigirionegai.info/">
         <span class="gblog-brand flex align-center justify-center">
           <img
             class="gblog-brand__img"
